Fix readme overflow on small screen

--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -72,6 +72,7 @@ main {
   padding: 1rem;
   flex-grow: 1;
   flex-shrink: 0;
+  overflow: auto;
   box-sizing: border-box;
   background-color: #fff;
 
@@ -97,7 +98,6 @@ main {
   background-color: #f6f8fa;
   padding: 1rem;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.033) inset;
-  overflow-x: auto;
   margin: 0;
   line-height: 1.2rem;
 }
